--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,6 @@
             "name": "michelmanzatotebar",
             "email": "zsouta22@gmail.com"
         }
-    ]
+    ],
+    "require": {}
 }
