--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,10 +1,13 @@
 RewriteEngine On
-
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ IndexModels.php [QSA,L]
+RewriteRule ^(.*)$ index.php [QSA,L]
+
+<Limit GET POST PUT DELETE OPTIONS>
+    Require all granted
+</Limit>
 
 
 Header set Access-Control-Allow-Origin "*"
 Header set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
-Header set Access-Control-Allow-Headers "Content-Type"
+Header set Access-Control-Allow-Headers "Content-Type, Authorization"
